k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: veidemann-testsites 
  namespace: default
spec:
  rules:
  - host: veidemann.local
    http:
      paths:
      - path: /testsites
        backend:
          serviceName: veidemann-testsites 
          servicePort: 8080
